WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58500
REGRESSION (
r81992
): Facebook photo tags can get cut off when moving the mouse.
https://bugs.webkit.org/show_bug.cgi?id=58500
Summary
REGRESSION (r81992): Facebook photo tags can get cut off when moving the mouse.
Andy Estes
Reported
2011-04-13 18:07:34 PDT
When viewing photos on Facebook, a tooltip is displayed when the mouse moves over a person who has been tagged in the photo. Due to <
http://trac.webkit.org/changeset/81992
>, these tooltips can sometimes get inappropriately clipped, leaving only half of the text visible. See the attached screenshots.
Attachments
Safari 5.0.4 (expected)
(33.02 KB, image/png)
2011-04-13 18:07 PDT
,
Andy Estes
no flags
Details
WebKit nightly r83750 (actual)
(33.49 KB, image/png)
2011-04-13 18:08 PDT
,
Andy Estes
no flags
Details
Use the container, rather than the containing block, to compute RenderTexts’ repaint rects
(20.52 KB, patch)
2011-04-17 13:51 PDT
,
mitz
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2011-04-13 18:07:58 PDT
Created
attachment 89507
[details]
Safari 5.0.4 (expected)
Andy Estes
Comment 2
2011-04-13 18:08:31 PDT
Created
attachment 89508
[details]
WebKit nightly
r83750
(actual)
Andy Estes
Comment 3
2011-04-13 18:09:38 PDT
<
rdar://problem/9282486
>
mitz
Comment 4
2011-04-17 13:51:26 PDT
Created
attachment 89960
[details]
Use the container, rather than the containing block, to compute RenderTexts’ repaint rects
Eric Seidel (no email)
Comment 5
2011-04-18 09:43:07 PDT
Comment on
attachment 89960
[details]
Use the container, rather than the containing block, to compute RenderTexts’ repaint rects LGTM.
Eric Seidel (no email)
Comment 6
2011-04-18 09:43:48 PDT
cmarrin/smfr know this code better than I , but It looks right to me. CCing them to let them see it go by.
mitz
Comment 7
2011-04-18 12:19:12 PDT
Fixed in
r84166
. <
http://trac.webkit.org/changeset/84166
>
WebKit Review Bot
Comment 8
2011-04-18 13:40:57 PDT
http://trac.webkit.org/changeset/84166
might have broken SnowLeopard Intel Release (WebKit2 Tests) The following tests are not passing: fullscreen/full-screen-cancel.html http/tests/xmlhttprequest/response-encoding.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug