<rdar://problem/9282486> REGRESSION (r81992): Facebook photo tags can get cut off when moving the mouse. https://bugs.webkit.org/show_bug.cgi?id=58500

Reviewed by Eric Seidel.

Source/WebCore:

Test: fast/repaint/text-in-relative-positioned-inline.html

* rendering/RenderText.cpp:
(WebCore::RenderText::clippedOverflowRectForRepaint): Use the container’s repaint rect, not
the containing block’s. This matters when the containing block is outside the RenderText’s
enclosing layer, as is the case here.

LayoutTests:

* fast/repaint/text-in-relative-positioned-inline-expected.checksum: Added.
* fast/repaint/text-in-relative-positioned-inline-expected.png: Added.
* fast/repaint/text-in-relative-positioned-inline-expected.txt: Added.
* fast/repaint/text-in-relative-positioned-inline.html: Added.



Canonical link: https://commits.webkit.org/73906@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84166 268f45cc-cd09-0410-ab3c-d52691b4dbfc